Examples/test-suite/errors/c_spaceship.i
%module xxx

int a[(1<=>2>1)];
