Examples/test-suite/errors/c_spaceship.stderr
c_spaceship.i:3: Error: Syntax error in input(1).
